Integrated tests to CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,10 @@ enable_testing()
 add_library(c11-threadpool INTERFACE)
 target_include_directories(c11-threadpool INTERFACE "include")
 
+add_subdirectory(tests)
+add_test(NAME helloworld COMMAND helloworld)
+add_test(NAME queue COMMAND queue)
+
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
 include(CPack)
